--- a/app/src/main/res/layout/activity_remove_staff.xml
+++ b/app/src/main/res/layout/activity_remove_staff.xml
@@ -82,7 +82,7 @@
                     android:textSize="15sp" />
 
                 <EditText
-                    android:id="@+id/txtStaffID"
+                    android:id="@+id/txtOrderNo"
                     android:layout_width="380dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -126,7 +126,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btnCheckOccupancy"
+                        android:id="@+id/btnRemoveExistStaff"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
