--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -82,7 +82,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/txtStaffID"
+            android:id="@+id/txtOrderNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints=""
