--- a/app/src/main/res/layout/activity_check_room_occupancy.xml
+++ b/app/src/main/res/layout/activity_check_room_occupancy.xml
@@ -29,7 +29,7 @@
                     style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View Working Schedule"
+                    android:text="Check Room Occupancy"
                     android:textColor="@color/white" />
 
             </LinearLayout>
@@ -46,6 +46,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -53,51 +54,36 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    app:srcCompat="@drawable/ic_profile" />
-
                 <TextView
                     android:id="@+id/textView"
-                    android:layout_width="match_parent"
+                    android:layout_width="393dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="15dp"
                     android:paddingTop="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
+                    android:text="Select Room Type"
                     android:textAlignment="center"
                     android:textSize="24sp"
-                    android:textStyle="bold"
-                    tools:text="UserName"/>
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="match_parent"
+                    android:id="@+id/textView8"
+                    android:layout_width="380dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="15dp"
                     android:paddingTop="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textSize="15dp"
-                    tools:text="Time Range Weekly" />
+                    android:text="Room Type"
+                    android:textSize="15sp" />
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
+                <Spinner
+                    android:id="@+id/ddlRoomType"
+                    android:layout_width="380dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="15dp"
-                    android:paddingTop="15dp"
-                    android:paddingRight="15dp"
-                    android:paddingBottom="15dp"
-                    android:textSize="15sp"
-                    tools:text="Off Day Period" />
-
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown" />
 
 
             </LinearLayout>
@@ -109,24 +95,24 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="119dp"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btnViewSchedule"
+                        android:id="@+id/btnCheckRoomOccupancy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="15dp"
-                        android:cursorVisible="True"
                         android:minWidth="150dp"
                         android:paddingLeft="15dp"
                         android:paddingTop="15dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="15dp"
-                        android:text="Submit"
+                        android:text="Check Occupancy"
                         android:textSize="18sp"
-                        android:translationX="245dp"
+                        android:translationX="160dp"
+                        android:translationY="20dp"
                         app:backgroundTint="#5C5C5C"
                         app:cornerRadius="@null" />
 
