--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -53,7 +53,7 @@
                 android:layout_height="475dp">
 
                 <TextView
-                    android:id="@+id/txtOrderID"
+                    android:id="@+id/txtBookingID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
@@ -68,7 +68,7 @@
                     tools:text="Order ID" />
 
                 <TextView
-                    android:id="@+id/txtPeriod"
+                    android:id="@+id/txtOrderStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="54dp"
                     android:layout_marginStart="30dp"
@@ -79,7 +79,7 @@
                     android:paddingBottom="15sp"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtOrderID"
+                    app:layout_constraintTop_toBottomOf="@+id/txtBookingID"
                     tools:text="Staying Period" />
 
                 <TextView
@@ -94,7 +94,7 @@
                     android:paddingBottom="15sp"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtPeriod"
+                    app:layout_constraintTop_toBottomOf="@+id/txtOrderStatus"
                     tools:text="Customer Name" />
 
                 <TextView
@@ -169,7 +169,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btnOrderConfirm"
+                        android:id="@+id/btnPayment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
