--- a/app/src/main/res/layout/activity_staff_management.xml
+++ b/app/src/main/res/layout/activity_staff_management.xml
@@ -53,30 +53,24 @@
                 tools:layout_editor_absoluteY="-57dp">
 
                 <TextView
-                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Staff Management"
-                    android:textColor="@color/white"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-                <Button
-                    android:id="@+id/btnManageShift"
-                    android:layout_width="150dp"
-                    android:layout_height="80dp"
-                    android:text="Manage Shift"
+                    android:id="@+id/UserName"
+                    android:layout_width="397dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="220dp"
+                    android:text="Select an option"
                     android:textAlignment="center"
-                    android:textSize="18sp"
+                    android:textSize="28sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:layout_editor_absoluteY="426dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/btnCreateStaff"
                     android:layout_width="150dp"
                     android:layout_height="80dp"
                     android:layout_marginStart="40dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="32dp"
                     android:text="Create Staff"
                     android:textAlignment="center"
                     android:textSize="18sp"
@@ -87,7 +81,7 @@
                     android:id="@+id/btnRemoveStaff"
                     android:layout_width="150dp"
                     android:layout_height="80dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="32dp"
                     android:layout_marginEnd="40dp"
                     android:text="Remove Staff"
                     android:textAlignment="center"
@@ -95,18 +89,17 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/UserName" />
 
-                <TextView
-                    android:id="@+id/UserName"
-                    android:layout_width="397dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="250dp"
-                    android:text="Select an option"
+                <Button
+                    android:id="@+id/btnManageShift"
+                    android:layout_width="150dp"
+                    android:layout_height="80dp"
+                    android:text="Manage Shift"
                     android:textAlignment="center"
-                    android:textSize="28sp"
-                    android:textStyle="bold"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.501"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    tools:layout_editor_absoluteY="399dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
