--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -96,7 +96,7 @@
                     android:textSize="15sp" />
 
                 <EditText
-                    android:id="@+id/txtStaffID"
+                    android:id="@+id/txtOrderNo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints=""
