--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,30 +3,30 @@
 
     <group>
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/ic_profile"
             android:icon="@drawable/ic_profile"
             android:title="Profile"/>
         <item
-            android:id="@+id/nav_messages"
-            android:icon="@drawable/ic_messages"
-            android:title="Messages"/>
+            android:id="@+id/nav_booking"
+            android:icon="@drawable/ic_nav_booking"
+            android:title="Booking Management"/>
         <item
-            android:id="@+id/nav_friends"
-            android:icon="@drawable/ic_friends"
-            android:title="Friends"/>
+            android:id="@+id/nav_activity"
+            android:icon="@drawable/ic_nav_activity"
+            android:title="Customer Activity"/>
+        <item
+            android:id="@+id/nav_operation"
+            android:icon="@drawable/ic_nav_operation"
+            android:title="Operation Management"/>
     </group>
 
-    <item android:title="Account Settings">
-        <menu>
-            <item
-                android:id="@+id/nav_update"
-                android:icon="@drawable/ic_update"
-                android:title="Update Profile"/>
+
+        <group>
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_signout"
                 android:title="Sign Out"/>
-        </menu>
-    </item>
+        </group>
+
 
 </menu>
